# lock-challenge

./: .gitignore  README.md
design_log/: README.md  Step_1.md  Step_1_Appendix.md  Step_1_old.md  Step_1_older.md  Step_2.md  Step_2_Appendix.md  Step_3.md  Step_3_Appendix.md  Step_4.md  Step_4_Appendix.md  Step_5.md  Step_5_Appendix.md  Step_5_old.md  Step_6.md  Step_6_Appendix.md
design_log/static_links/: README.md  Step_3.md  Step_4.md  Step_5.md  Step_6.md
doc/: README.md  design_log.md
doc/Step_3/html/: LockGuard_8h.html  LockGuard_8h__dep__incl.map  LockGuard_8h__incl.map  LockGuard_8h__incl.md5  LockGuard_8h_source.html  Step__3_8md.html  Step__3_8md_source.html  annotated.html  files.html  functions.html  functions_func.html  functions_vars.html  globals_defs.html  globals_func.html  globals_vars.html  index.html  main_8cpp.html  main_8cpp__incl.md5  main_8cpp_source.html  main__no__debug_8cpp.html  main__no__debug_8cpp__incl.md5  namespacemembers_vars.html
docs/: index.html
docs/Step_3/html/: LockGuard_8h.html  LockGuard_8h__dep__incl.md5  LockGuard_8h_source.html  Step__3_8md.html  bug.html  (+25 more)
prompt/: prompt_email.txt
src/Step_1/: LockGuard.h  hello.cpp  lock_guard.cpp  lock_guard.h  main.cpp  makefile
src/Step_2/: LockGuard.h  main.cpp  makefile
src/Step_3/: Doxyfile  LockGuard.h  main.cpp  main_no_debug.cpp
src/Step_4/: Doxyfile  LockGuard.h  error_log.txt  main.cpp  main_no_debug.cpp  makefile
src/Step_5/: CMakeLists.txt  Doxyfile  main.cpp  main_no_debug.cpp
src/Step_6/: CMakeLists.txt  Doxyfile  memory_pool.c  test-memory-pool.c
(+202 files in other folders)
